Format and javadoc